automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -13,7 +13,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Computer algorithms that generalise the structure of data in order to predict the output for new/sut"
+    "Computer algorithms that generalise the structure of data in order to predict the output for new/future datasets."
    ]
   },
   {
