automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -29,7 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Supervise"
+    "Supervised and unsupervised learning"
    ]
   },
   {
