--- a/index.ipynb
+++ b/index.ipynb
@@ -45,7 +45,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your response here"
+    "Regression is used with quanti"
    ]
   },
   {
