automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -45,7 +45,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Regression is used with quantative data, eg house prices, "
+    "Regression is used with quantative data, eg price or size."
    ]
   },
   {
