--- a/index.ipynb
+++ b/index.ipynb
@@ -45,7 +45,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Regression is used with quantative data, eg price or size. Classification algorithms "
+    "Regression is used with quantative data, eg price or size. Classification algorithms predict"
    ]
   },
   {
