automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -45,7 +45,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Regression is used with quantative data, eg price or size. Classification algorithms predict a categorical variable, for example colour, species, "
+    "Regression is used with quantative data, eg price or size. Classification algorithms predict a categorical variable, for example colour, species. "
    ]
   },
   {
