--- a/index.ipynb
+++ b/index.ipynb
@@ -41,11 +41,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "Regression is used with quantative data, eg price or size. Classification algorithms predict a categorical variable, for example colour, species. "
+    "#Regression is used with quantative data, eg price or size. Classification algorithms predict a categorical variable, for example colour, species. "
    ]
   },
   {
@@ -57,11 +57,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "Classification"
+    "#Classification"
    ]
   },
   {
@@ -73,11 +73,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "Regression"
+    "#Regression"
    ]
   },
   {
